first version of tram widget

--- a/src/widget-monitor/src/app/app.component.html
+++ b/src/widget-monitor/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="wrapper-widgets">
-  <app-tram></app-tram>
+  <app-tram
+    [stops]="stops"
+    [timeOffset]="timeOffset"
+    [numberOfOpportunities]="numberOfOpportunities"></app-tram>
   <app-weather></app-weather>
   <app-stock></app-stock>
   <app-clock></app-clock>
