--- a/src/widget-monitor/src/styles.scss
+++ b/src/widget-monitor/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import '~bootstrap/scss/bootstrap';
+
+* {
+  font-family: 'Righteous', cursive;
+}
