first version of clock widget

--- a/src/widget-monitor/src/app/widgets/clock/clock.component.html
+++ b/src/widget-monitor/src/app/widgets/clock/clock.component.html
@@ -1,1 +1,5 @@
-<div class="wrapper-clock"></div>
+<div class="wrapper-clock">
+  <div class="time-clock">
+    {{time | date:'H:mm:ss'}}
+  </div>
+</div>
