--- a/src/widget-monitor/src/app/widgets/clock/clock.component.scss
+++ b/src/widget-monitor/src/app/widgets/clock/clock.component.scss
@@ -1,5 +1,16 @@
+@import "src/style/variable";
+
 .wrapper-clock {
   width: 100%;
   height: 100%;
-  background: yellow;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  background: $primary;
+  color: $secondary;
+
+  .time-clock {
+    font-size: 6em;
+  }
 }
