first version of weather widget

--- a/src/widget-monitor/src/app/app.component.html
+++ b/src/widget-monitor/src/app/app.component.html
@@ -3,8 +3,11 @@
     [stops]="stops"
     [timeOffset]="timeOffset"
     [numberOfOpportunities]="numberOfOpportunities"></app-tram>
-  <app-weather></app-weather>
-  <app-stock></app-stock>
+  <app-weather
+    [latitude]="51.0504088"
+    [longitude]="13.7372621"
+  ></app-weather>
   <app-clock></app-clock>
+  <app-stock></app-stock>
 </div>
 
