--- a/src/widget-monitor/src/app/app.component.html
+++ b/src/widget-monitor/src/app/app.component.html
@@ -4,10 +4,12 @@
     [timeOffset]="timeOffset"
     [numberOfOpportunities]="numberOfOpportunities"></app-tram>
   <app-weather
-    [latitude]="51.0504088"
-    [longitude]="13.7372621"
+    [latitude]="latitude"
+    [longitude]="longitude"
   ></app-weather>
   <app-clock></app-clock>
-  <app-stock></app-stock>
+  <app-stock
+    [symbol]="symbol"
+  ></app-stock>
 </div>
 
