--- a/src/widget-monitor/src/app/app.component.html
+++ b/src/widget-monitor/src/app/app.component.html
@@ -10,6 +10,8 @@
   <app-clock></app-clock>
   <app-stock
     [symbol]="symbol"
+    [interval]="interval"
+    [range]="range"
   ></app-stock>
 </div>
 
