--- a/widget-monitor/src/app/app.component.html
+++ b/widget-monitor/src/app/app.component.html
@@ -7,7 +7,9 @@
     [latitude]="latitude"
     [longitude]="longitude"
   ></app-weather>
-  <app-clock></app-clock>
+  <app-clock
+    [timeIsRunning]="true"
+  ></app-clock>
   <app-stock
     [symbol]="symbol"
     [interval]="interval"
