weather & clock changed for better readability

--- a/widget-monitor/src/app/widgets/clock/clock.component.html
+++ b/widget-monitor/src/app/widgets/clock/clock.component.html
@@ -1,5 +1,13 @@
 <div class="wrapper-clock">
   <div class="time-clock">
-    {{time | date:'H:mm:ss'}}
+    {{time | date:'H:mm'}}
+  </div>
+  <div class="day-ticker">
+    <div>
+      {{time | date:'d.M'}}
+    </div>
+    <div>
+      {{time | date:'E'}}
+    </div>
   </div>
 </div>
