--- a/widget-monitor/src/app/widgets/clock/clock.component.scss
+++ b/widget-monitor/src/app/widgets/clock/clock.component.scss
@@ -4,13 +4,25 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-content: center;
   align-items: center;
-  background: $primary;
-  color: $secondary;
+  gap: 15px;
+  background: $secondary;
+  color: $primary;
 
   .time-clock {
-    font-size: 6em;
+    font-size: 7em;
+  }
+
+  .day-ticker {
+    font-size: 2.5em;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+
+
   }
 }
