--- a/widget-monitor/src/app/widgets/weather/weather.component.scss
+++ b/widget-monitor/src/app/widgets/weather/weather.component.scss
@@ -3,20 +3,24 @@
 .wrapper-weather {
   width: 100%;
   height: 100%;
-  background: $primary;
-  color: $secondary;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-content: space-around;
+  background: $secondary;
+  color: $primary;
 
   .weather-current {
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-content: center;
+    align-items: center;
+    gap: 10px;
     margin-bottom: -40px;
 
     .weather-current-temperature {
-      font-size: 9em;
+      font-size: 7.5em;
+    }
+    
+    .weather-high-low {
+      font-size: 2.5em;
     }
 
     .weather-current-temp-high-low {
