stock for more than one symbols. Styling

--- a/widget-monitor/src/app/app.component.html
+++ b/widget-monitor/src/app/app.component.html
@@ -11,7 +11,7 @@
     [timeOffset]="timeOffset"
     [numberOfOpportunities]="numberOfOpportunities"></app-tram>
   <app-stock
-    [symbol]="symbol"
+    [symbols]="symbol"
     [interval]="interval"
     [range]="range"
   ></app-stock>
