--- a/widget-monitor/src/app/app.component.scss
+++ b/widget-monitor/src/app/app.component.scss
@@ -1,5 +1,8 @@
+@import "src/style/variable";
+
 .wrapper-widgets {
   display: grid;
   grid-template-rows: 30vh 70vh;
   grid-template-columns:50% 50% ;
+  background: $secondary;
 }
