--- a/widget-monitor/src/app/widgets/tram/tram.component.scss
+++ b/widget-monitor/src/app/widgets/tram/tram.component.scss
@@ -27,11 +27,17 @@
 
       .stop-opportunities {
         .opp-line {
-          font-size: 1.5em;
+          font-size: 2.5em;
+        }
+
+        .opp-direction {
+          font-size: 1.2em;
+          white-space: nowrap;
+          text-overflow: ellipsis;
         }
 
         .opp-time {
-          font-size: 1.2em;
+          font-size: 2em;
         }
       }
     }
