--- a/widget-monitor/src/app/app.component.html
+++ b/widget-monitor/src/app/app.component.html
@@ -5,6 +5,7 @@
   <app-weather
     [latitude]="latitude"
     [longitude]="longitude"
+    [animateGraphics]="true"
   ></app-weather>
   <app-tram
     [stops]="stops"
