extend stock app for storybookuse

--- a/widget-monitor/src/app/app.component.html
+++ b/widget-monitor/src/app/app.component.html
@@ -16,6 +16,8 @@
     [interval]="interval"
     [range]="range"
     [mockData]="mockData"
+    positiveColor="green"
+    negativeColor="red"
   ></app-stock>
 </div>
 
